All camera binds corrupting after deleting many objects #63697

Closed
opened 2019-04-18 13:10:47 +02:00 by Tom Wilson · 14 comments

Blender Version
Broken: blender-2.80.0-git.03bd024c077d-windows64

Short description of error
Just noticed in preparing an example file for another bug report (#63304), upon deleting many objects at once (maybe a binded camera or 2 by mistake) the viewport now ignores all camera binds in the timeline and it just uses the last active camera.

All subsequent camera binds don't work either.
Rendering produces the same result as in viewport.
I ran into the issue 3 times before I successfully managed to reduce my file without destroying the camera binds in the animation.

Steps to reproduce

reduced.blend

Notice how Camera.023 is the only camera used in the viewport, despite all the many camera binds in the timeline.

**Blender Version** Broken: blender-2.80.0-git.03bd024c077d-windows64 **Short description of error** Just noticed in preparing an example file for another bug report (#63304), upon deleting many objects at once (maybe a binded camera or 2 by mistake) the viewport now ignores all camera binds in the timeline and it just uses the last active camera. All subsequent camera binds don't work either. Rendering produces the same result as in viewport. I ran into the issue 3 times before I successfully managed to reduce my file without destroying the camera binds in the animation. **Steps to reproduce** [reduced.blend](https://archive.blender.org/developer/F6956599/reduced.blend) Notice how Camera.023 is the only camera used in the viewport, despite all the many camera binds in the timeline.
Author

Added subscriber: @hedgehog90-3

Added subscriber: @hedgehog90-3

#63703 was marked as duplicate of this issue

#63703 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Can you provide a file where we can delete objects to reproduce the broken file?

Can you provide a file where we can delete objects to reproduce the broken file?
Author

I tried to reproduce it with the same file but I couldn't.
I think the bug is best observed in the file I've uploaded, where the timeline markers are clearly there and linked to camera objects but they are all simply ignored.

I tried to reproduce it with the same file but I couldn't. I think the bug is best observed in the file I've uploaded, where the timeline markers are clearly there and linked to camera objects but they are all simply ignored.
Alexander Gavrilov was assigned by Sebastian Parborg 2019-04-19 12:21:59 +02:00

Added subscriber: @angavrilov

Added subscriber: @angavrilov

I'm unsure if this is something we should look into if you can't reproduce this anymore.

@angavrilov what do you think?

I'm unsure if this is something we should look into if you can't reproduce this anymore. @angavrilov what do you think?

Added subscribers: @Swespy, @JacquesLucke

Added subscribers: @Swespy, @JacquesLucke

Have you ever used VSE with scene strips here? Camera switching is blocked by a hidden scene flag that is supposed to be set only temporarily while rendering scene strips.

Have you ever used VSE with scene strips here? Camera switching is blocked by a hidden scene flag that is supposed to be set only temporarily while rendering scene strips.

This issue was referenced by 2c5ee7418c

This issue was referenced by 2c5ee7418c26bb4e756e1fb58508775d25550d08

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

In #63697#669790, @angavrilov wrote:
Have you ever used VSE with scene strips here? Camera switching is blocked by a hidden scene flag that is supposed to be set only temporarily while rendering scene strips.

Yes, that´s what I usually do in mine scenes!

> In #63697#669790, @angavrilov wrote: > Have you ever used VSE with scene strips here? Camera switching is blocked by a hidden scene flag that is supposed to be set only temporarily while rendering scene strips. Yes, that´s what I usually do in mine scenes!

Added subscriber: @Firepal

Added subscriber: @Firepal

This comment was removed by @Firepal

*This comment was removed by @Firepal*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63697
No description provided.